# homepage

./: README.md  pyproject.toml
src/homepage/: __main__.py  calendar.py  github.py  main.py  parser.py  picnic.py
src/homepage/templates/: activities.html  base.html  calendar.html  github.html  index.html  koms.html  picnic.html  recipes.html
